--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button class="botao">Criar um portfolio</button>
         <button class="botao">Atualizar meu currículo</button>
       </div>
+      <div class="abas-textos"></div>
     </section>
     <script src="main.js"></script>
   </body>
