--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <button class="botao">Atualizar meu currículo</button>
       </div>
       <div class="abas-textos"> 
-        <div class="aba-conteudo"> <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+        <div class="aba-conteudo">
+           <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
           <h4 class="aba-conteudo-titulo-secundario">
             Tempo para completar o objetivo
-          </h4></div>
-      </div>
+          </h4>
+        </div>
       <div class="aba-conteudo">
         <h3 class="aba-conteudo-titulo-principal">
           Criar 5 projetos em Javascript
@@ -45,6 +46,7 @@
         <h4 class="aba-conteudo-titulo-secundario">
           Tempo para completar o objetivo
         </h4>
+      </div>
       </div>
     </section>
     <script src="main.js"></script>
